	  boxtypes can find out if the widget they are drawing
	  for is active or not.
	- Fl_Button and its subclasses did not redraw the parent
	  when the boxtype was FL_NO_BOX and they lost keyboard
	  focus (the parent redraw clears the focus box.)
	- Fixed the example program makefile - wasn't building
	  the mandelbrot and shiny demos right.
	- Fl::set_font(Fl_Font, Fl_Font) was not implemented.


CHANGES IN FLTK 1.1.0b7

	- More documentation updates...
	- Mac OS X support works 95%
	- The Fl_Window::hotspot() off-screen avoidance code was
	  commented out.
	- Mac OS X uses mostly Carbon event handling to support
	  Mousewheel, three buttons, all modifier keys, etc.
	- Updated paragraph 4 of the FLTK license exceptions;
	  there was some question about the requirement to show
	  that a program uses FLTK, which is required by section
	  6 of the LGPL. The new exemption specifies that
	  inclusion of the FLTK license is not required, just a
	  statement that the program uses FLTK.
	- Fl_Button::handle() was calling take_focus() for both
	  FL_PUSH and FL_DRAG.
	- File and memory fixes for Fl_GIF_Image, Fl_PNG_Image,
	  Fl_PNM_Image, Fl_Shared_Image, Fl_Tiled_Image, and
	  Fl_XBM_Image.
	- filename_match() didn't handle backslashes properly
	  under WIN32, and didn't use a case-insensitive
	  comparison under MacOS X.
	- The Fl class was missing access methods for the
	  FL_MOUSEWHEEL event values - Fl::event_dx() and
	  Fl::event_dy().
	- The default help string didn't include the -nokbd
	  option.
	- "make uninstall" didn't uninstall the static OpenGL
	  widget library.
	- Mac cursor shapes added...
	- Fl_Text_Display would lockup when all text was
	  deleted; for example, when running the editor
	  demo, you couldn't load a second file.
	- Added Fl::lock() and friends from FLTK 2.0 to
	  support multi-threaded applications; see the
	  "threads" demo for an example of this.
	- Fl_Check_Button and Fl_Round_Button now use the