@@ -1,10 +1,5 @@
 <HTML>
-<HEAD>
-	<TITLE>Fl_Wizard - ESP Widget Set for FLTK</TITLE>
-	<LINK REL="STYLESHEET" TYPE="text/css" HREF="fltk.css">
-</HEAD>
-
-<BODY BGCOLOR="#ccccff">
+<BODY>
 
 <!-- NEW PAGE -->
 <H2>class Fl_Wizard</H2>
